PyMaker/datas/object2/RawHTML/i9801/Python_DOC_referPages.using-global-time-sleep-leads-to-invalid-syntax.txt
<div class="post-text" itemprop="text">
<pre><code>def imports():

    import time
    global time.sleep()


def title_screen():

    print("Welcome to Text RPG")
    print("Created by: Nick Giesler")
    print("")
    input("Press ENTER to Begin:")
    print("Loading...")
    time.sleep(1)


imports()

title_screen()
</code></pre>
<p>When ran, this returns invalid syntax pointing to "<code>global time.sleep()</code>":</p>
<pre><code>Traceback (most recent call last):    
  File "python", line 3    
    global time.sleep()
              ^    
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Only <code>identifier</code>(s) can follow <a href="https://docs.python.org/3/reference/simple_stmts.html#the-global-statement" rel="nofollow noreferrer">the global statement</a>:</p>
<blockquote>
<p><code>global_stmt ::=  "global" identifier ("," identifier)*</code></p>
</blockquote>
<p>where identifiers are plain names such as:</p>
<pre><code>a = 20
b = "string" 
global a, b
</code></pre>
<p>when you break that requirement and python isn't able to find an identifier after <code>global</code>, a <code>SyntaxError</code> is going to get raised.</p>
<p>What you've entered after the <code>global</code> keyword isn't an identifier; it's <a href="https://docs.python.org/3/reference/expressions.html#calls" rel="nofollow noreferrer">a function call</a> which is syntactically recognized by the <code>()</code> after the identifier.</p>
</div>
<span class="comment-copy">What did you think <code>global time.sleep()</code> was supposed to do? That's nothing like how either <code>global</code> or <code>time.sleep</code> are supposed to be used.</span>
<span class="comment-copy">What is the question, again?</span>
<span class="comment-copy">You don't need a function for the import calls. Those are meant to be at the top of the script.</span>
